...
    <string name="sign_in___broken_setup___websocket_upgrade_failed">"OctoApp was unable to connect to the websocket of your OctoPrint due to an configuration issue"</string>

    <!-- Auto filled -->
    <string name="sign_in___cancel_and_use_other_information_message">"Do you want to cancel and connect to an other OctoPrint?"</string>

    <!-- Auto filled -->
    <string name="sign_in___cancel_and_use_other_information_title">"Connect to other"</string>

    <!-- Auto filled -->
    <string name="sign_in___connect_to_other_octoprint">"Connect to an other OctoPrint"</string>

    <!-- Auto filled -->
    <string name="sign_in___continue">"Continue"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___error_invalid_url">"Please provide a valid URL"</string>

    <!-- Auto filled -->
    <string name="sign_in___discover___web_url_hint">"OctoPrint URL"</string>

    <!-- Auto filled -->
    <string name="sign_in___discover___web_url_hint_active">"OctoPrint URL – Copy this from your browser!"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___connect_manually_subtitle">"It's easy!"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___connect_manually_title">"Connect manually"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___delete_printer_confirmation">"Delete OctoPrint"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___delete_printer_message">"Delete %s and all associated settings?"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___discovered_devices">"Discovered on your network"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___need_help">"Need help?"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___no_wifi_warning">"No WiFi, OctoPrint might not be available"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___options_title">"Which OctoPrint do you want to connect?"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___other_options">"Not what you were looking for?"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___previously_connected_devices">"Previously connected"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___quick_switch_disabled_subtitle">"Enable to reconnect"</string>

    <!-- Auto filled -->
    <string name="sign_in___discovery___quick_switch_disabled_title">"Quick switch not enabled"</string>
...
    <string name="sign_in___probe___basic_password">"Password"</string>

    <!-- Auto filled -->
    <string name="sign_in___probe___basic_username">"Username"</string>

    <!-- Auto filled -->
    <string name="sign_in___probe___edit_information">"Edit information"</string>

    <!-- Auto filled -->
    <string name="sign_in___probe___probing_active_title">"Testing the connection to OctoPrint…"</string>

    <!-- Auto filled -->
    <string name="sign_in___qr_code___hint">"You can find the API key in OctoPrint's settings under API"</string>
...
