...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        android:gravity="center"
        android:text="@string/sign_in___discovery___connect_manually_title"
        android:textAppearance="@style/OctoTheme.TextAppearance.Title.Big"
...
        android:textColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <de.crysxd.baseui.common.OctoTextInputLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginBottom="@dimen/margin_3"
        android:inputType="text|textUri"
        app:example="http://192.168.1.134|octoprint.home:5000|https://myoctoprint.com|http://192.168.0.204:5000/octoprint"
...
