...
                app:tint="@color/blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/buttonDelete"
        style="@style/OctoTheme.Widget.Button.Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_round_delete_24"
...
