...
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_3"
        android:text="@string/sign_in___discovery___previously_connected_devices"
        android:textAppearance="@style/OctoTheme.TextAppearance.SubTitle"
        android:textColor="@color/normal_text"
        app:layout_constraintEnd_toStartOf="@id/buttonShowDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoveredOptions"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/buttonShowDelete"
...
