...
        android:orientation="vertical"
        app:divider="@drawable/margin_0_1_divider"
        app:layout_constraintTop_toBottomOf="@id/otherOptionsTitle"
        app:showDividers="middle">

        <de.crysxd.octoapp.signin.discover.DiscoverOptionView
            android:id="@+id/manualConnectOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>


...
